fixed some spacings and github link

--- a/public/style.css
+++ b/public/style.css
@@ -524,6 +524,9 @@ footer {
     display: flex;
 }
 
+.feedback-header {
+    margin-left: 32.5px;
+}
 
 @media (max-width: 768px) {
 
